--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,12 @@
 .card {
-  border-radius: 12px;
+  border-radius: 1em;
   border-color: black;
 }
 
 .row {
-  padding: 10px;
+  padding: 0.25em;
 }
 
-img {
-  border-radius: 12px;
-  border-color: black;
+.card:hover {
+  background-color: red;
 }
